--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.DuAn1"
         tools:targetApi="31">
 
-        <!-- ✅ WelcomeActivity là activity khởi động -->
+        <!-- WelcomeActivity là activity khởi động -->
         <activity
             android:name=".WelcomeActivity"
             android:exported="true">
@@ -24,17 +24,20 @@
             </intent-filter>
         </activity>
 
-        <!-- LoginActivity -->
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true" />
-
-        <!-- MainActivity -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-
-        <!-- RegisterActivity -->
+        <activity android:name=".LoginActivity" android:exported="true" />
+        <activity android:name=".MainActivity" android:exported="true" />
         <activity android:name=".RegisterActivity" />
+
+        <!-- ✅ Các màn khác -->
+        <activity android:name=".ProductDetailActivity" />
+        <activity android:name=".CartActivity" />
+        <activity android:name=".XacNhanThanhToanActivity" />
+
+        <!-- ✅ Thêm các activity còn thiếu -->
+        <activity android:name=".FavoriteActivity" />
+        <activity android:name=".NotificationActivity" />
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".EditAccountActivity" />
+        <activity android:name=".ChangePasswordActivity" />
     </application>
 </manifest>
