--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,5 +36,6 @@
         <activity android:name=".EditAccountActivity" />
         <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".ChiTietActivity" />
+        <activity android:name=".ThanhToanThanhCongActivity"/>
     </application>
 </manifest>
